# Spark

./: .gitignore  README.md  build_spark.bat  check_rust.bat  download_models.bat  index.html  init_spark.bat  package-lock.json  package.json  setup.bat  start_spark.bat  tailwind.config.js.bak  uninstall.bat
src/: App.css  App.tsx  App_header_fix.tsx  Popup.tsx  Settings.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
