[package]
name = "spark"
version = "0.1.0"
description = "Spark local translation app"
authors = ["takum"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["image-ico", "image-png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llama-cpp-2 = "0.1.133"
encoding_rs = "0.8"

[profile.release]
panic = "abort" # Strip expensive panic messages
codegen-units = 1 # Better optimizations
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
